--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -16,8 +16,8 @@
   "result": "نتيجة",
   "search_by_product": "البحث بالمنتج",
   "sorting_by": "الفرز حسب",
-  "price_high_to_low": "السعر الاعلى الى الادنى",
-  "price_low_to_high": "السعر الادني الي الاعلي",
+  "price_high_to_low": "من  السعر الاعلى الى السعر الادنى",
+  "price_low_to_high": "من  السعر الادنى الى السعر الاعلى",
   "discard": "تجاهل",
   "apply": "تطبيق",
   "add_to_cart": "أضف إلى السلة",
@@ -44,7 +44,7 @@
   "order_successful": "تهانينا ، لقد تم دفع طلبك بنجاح. الطلب هو ",
   "continue_shopping": "مواصلة التسوق",
   "notification": "إشعار",
-  "my_fav": "المفضلة",
+  "my_fav": "مفضلتي",
   "settings": "الإعدادات",
   "my_account": "حسابي",
   "edit_profile": "تعديل معلومات ملف الشخصي",
@@ -121,7 +121,7 @@
   "password_successful": "إعادة تعيين كلمة المرور بنجاح",
   "filter_your_statistics": "تصفية الإحصائيات الخاصة بك",
   "from_date": "من التاريخ",
-  "to_date": "حتي اليوم",
+  "to_date": "حتى اليوم",
   "product_count": "عدد المنتجات",
   "product": "منتج",
   "order_count": "عدد الطلبات",
@@ -171,7 +171,7 @@
   "no_notification": "لا يوجد اشعار حتى الآن",
   "delete_acc": "حذف الحساب",
   "no_order": "لا توجد طلبات حتى الآن",
-  "bid": "المناقصة",
+  "bid": "المزايدة",
   "coin": "عملة",
   "coins": "عملة",
   "verification_success": "تم التحقق بنجاح",
@@ -220,7 +220,8 @@
   "no_bids": "لا يوجد مزايدات حتي الان",
   "coupon_empty": "يجب ألا تكون القسيمة فارغة",
   "auction_status": "حالة المزاد",
-  "finished": "انتهي",
+  "finished": "انتهى",
   "processing": "جاري",
-  "image_size": "يجب أن يقل حجم الصورة عن 5 ميجا بايت"
+  "image_size": "يجب أن يقل حجم الصورة عن 5 ميجا بايت",
+  "code_invalid": "الكود خطا"
 }
