--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -127,7 +127,7 @@
   "order_count": "عدد الطلبات",
   "order": "طلب",
   "total_revenue": "إجمالي الإيرادات",
-  "sar": "ريال سعودي",
+  "sar": "ريال",
   "add_product": "أضف منتج",
   "determine": "تحديد المواصفات بعناية",
   "indicates": "* يشير إلى حقل مطلوب",
