--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -226,7 +226,9 @@
   "image_size": "يجب أن يقل حجم الصورة عن 5 ميجا بايت",
   "code_invalid": "الكود خطا",
   "go_home": "اذهب الي الرئيسية",
-  "ops_payment": "نآسف! فشل عملية الدفع"
+  "ops_payment": "نآسف! فشل عملية الدفع",
+  "soon": "قريباً"
+
 
 
 }
