--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -227,8 +227,6 @@
   "code_invalid": "الكود خطا",
   "go_home": "اذهب الي الرئيسية",
   "ops_payment": "نآسف! فشل عملية الدفع",
-  "soon": "قريباً"
-
-
-
+  "soon": "قريباً",
+  "no_points": "لا توجد نقاط حتي الان"
 }
