--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -228,5 +228,7 @@
   "go_home": "اذهب الي الرئيسية",
   "ops_payment": "نآسف! فشل عملية الدفع",
   "soon": "قريباً",
-  "no_points": "لا توجد نقاط حتي الان"
+  "no_points": "لا توجد نقاط حتي الان",
+  "cancel": "إلغاء",
+  "accept": "موافق"
 }
