--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -230,5 +230,7 @@
   "soon": "قريباً",
   "no_points": "لا توجد نقاط حتي الان",
   "cancel": "إلغاء",
-  "accept": "موافق"
+  "accept": "موافق",
+  "accept_auction_terms": "اقبل شروط واحكام المشاركة بالمزاد",
+  "confirm_auction_terms": "قم بتأكيد شروط وأحكام المزاد أولاً"
 }
