--- a/assets/langs/ar.json
+++ b/assets/langs/ar.json
@@ -234,5 +234,7 @@
   "accept_auction_terms": "اقبل شروط واحكام المشاركة بالمزاد",
   "confirm_auction_terms": "قم بتأكيد شروط وأحكام المزاد أولاً",
   "buy_points": "شراء النقاط",
-  "must_log_in_again": "يجب تسجيل الدخول من جديد"
+  "must_log_in_again": "يجب تسجيل الدخول من جديد",
+  "am": "صباحاً",
+  "pm": "مسائي"
 }
